[project]
name = "pytonb"
dynamic = ["version"]
description = "simple converter py<->notebook with sync function"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

# dev
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "import-ipynb>=0.2",
    "notebook>=7.4.7",
    "ruff>=0.14.0",
]

# test
[tool.pytest.ini_options]
testpaths = ['test']


# build
[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytonb/_version.py"

# linting
[tool.ruff]
target-version = "py313"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # enable
ignore = ["E731" ]        # ignore 

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]       

